--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,39 +1,17 @@
 # netlify.toml
-# Configuration file for Netlify deployment
+# Basic configuration for Netlify deployment
 
 [build]
   command = "npm run build"
   publish = "dist"
+  ignore_missing_publish_directory = true
 
 [build.environment]
-  # Set Node.js version to support your modern dependencies
   NODE_VERSION = "20"
   NPM_VERSION = "10"
 
-# Redirects all routes to index.html for SPA routing
+# Redirects for SPA
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-# Headers to set caching and security policies
-[[headers]]
-  for = "/*"
-    [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
-
-# Assets like images, CSS, JS can be cached longer
-[[headers]]
-  for = "/*.js"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.css"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/assets/*"
-    [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
